--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ layout: default
       <span class="page-number">Page {{ paginator.page }} of {{ paginator.total_pages }}</span>
       {% if paginator.previous_page %}
         {% if paginator.page == 2 %}
-          <a class="older-posts" href="/">Newer posts &rarr;</a>
+          <a class="older-posts" href="{{ site.github.url}}">Newer posts &rarr;</a>
         {% else %}
           <a class="older-posts" href="{{ site.github.url}}/page{{paginator.previous_page}}">Newer posts &rarr;</a>
         {% endif %}
